# python-course

football-prediction/: pyproject.toml
football-prediction/Notebooks/: 01_data_understanding.ipynb  create_features.ipynb  exploration.ipynb
football-prediction/Notebooks/.ipynb_checkpoints/: 01_data_understanding-checkpoint.ipynb
football-prediction/data/processed/: matches.csv
football-prediction/src/football_prediction/: data_loader.py  features.py  preprocessing.py
football-prediction/src/football_prediction/.ipynb_checkpoints/: model-checkpoint.py
